--- a/conFusion/app/views/dishdetail.html
+++ b/conFusion/app/views/dishdetail.html
@@ -1,6 +1,12 @@
 <div class="container">
     <div class="row row-content" ng-controller="DishDetailController">
         <div class="col-xs-12">
+            <button class="btn btn-xs btn-primary pull-right"
+                    type="button" ui-sref="app.menu">
+                Back to Menu
+            </button>
+            <div class="media">
+        <div class="col-xs-12">
             <div class="media-left media-middle">
                 <a href="#">
                     <img class="media-object img-thumbnail" ng-src={{dish.image}} alt="Uthappizza">
