Better way to add space and format text

--- a/conFusion/app/views/home.html
+++ b/conFusion/app/views/home.html
@@ -59,7 +59,7 @@
                          ng-src={{leader.image}} alt="Executive Chef">
                 </a>
                 <div class="media-body">
-                    <h2 class="media-heading">{{leader.name}}   <span><small>{{leader.designation}}</small></span></h2>
+                    <h2 class="media-heading">{{leader.name}}&nbsp;<small>{{leader.designation}}</small></h2>
                     <br/>
                     <p>{{leader.description}}</p>
                 </div>
