--- a/conFusion/app/views/dishdetail.html
+++ b/conFusion/app/views/dishdetail.html
@@ -1,12 +1,10 @@
 <div class="container">
     <div class="row row-content" ng-controller="DishDetailController">
-        <div class="col-xs-12">
-            <button class="btn btn-xs btn-primary pull-right"
-                    type="button" ui-sref="app.menu">
-                Back to Menu
-            </button>
-            <div class="media">
-        <div class="col-xs-12">
+
+        <div class="col-xs-12" ng-if="!showDish">
+            <h3>{{message}}</h3>
+        </div>
+        <div class="col-xs-12" ng-if="showDish">
             <div class="media-left media-middle">
                 <a href="#">
                     <img class="media-object img-thumbnail" ng-src={{dish.image}} alt="Uthappizza">
@@ -29,12 +27,14 @@
             </div>
             <blockquote ng-repeat="comment in dish.comments | orderBy: dish.orderCriteria">
                 <p>{{comment.rating}} Stars</p>
+
                 <p>{{comment.comment}}</p>
                 <footer>{{comment.author + ", "}} {{comment.date | date}}</footer>
 
             </blockquote>
             <blockquote ng-show="commentForm.$valid && !commentForm.$pristine">
                 <p>{{newComment.rating}} Stars</p>
+
                 <p>{{newComment.comment}}</p>
                 <footer>{{newComment.author + ", "}} {{newComment.date | date}}</footer>
             </blockquote>
@@ -65,6 +65,7 @@
                 <div class="form-group"
                      ng-class="{ 'has-error' : commentForm.comment.$error.required && !commentForm.comment.$pristine }">
                     <label for="comment" class="col-sm-2 control-label">Your Comment</label>
+
                     <div class="col-sm-10">
                         <textarea class="form-control" id="comment" name="comment" rows="12"
                                   ng-model="newComment.comment" required></textarea>
