--- a/conFusion/app/views/home.html
+++ b/conFusion/app/views/home.html
@@ -5,7 +5,10 @@
 
             <h3 align=center>Our Lipsmacking Culinary Creations</h3>
         </div>
-        <div class="col-xs-12 col-sm-9 col-sm-pull-3">
+        <div ng-if="!showDish">
+            <h3>{{message}}</h3>
+        </div>
+        <div class="col-xs-12 col-sm-9 col-sm-pull-3" ng-if="showDish">
             <div class="media">
                 <a class="pull-left" href="#">
                     <img class="media-object img-thumbnail"
