Adding feedback factory.

--- a/conFusion/app/views/contactus.html
+++ b/conFusion/app/views/contactus.html
@@ -78,13 +78,13 @@
                                            ng-model="feedback.tel.number">
                         </div>
                     </div>
-                    <div class="form-group"  ng-class="{ 'has-error has-feedback' : feedbackForm.emailid.$invalid && feedbackForm.emailid.$touched }">
+                    <div class="form-group"  ng-class="{ 'has-error has-feedback' : feedbackForm.emailid.$invalid && !feedbackForm.emailid.$pristine }">
                         <label for="emailid" class="col-sm-2 control-label">Email</label>
                         <div class="col-sm-10">
                             <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email"
                                    ng-model="feedback.email" required>
-                            <span ng-show="feedbackForm.emailid.$invalid && feedbackForm.emailid.$touched" class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
-                            <span ng-show="(feedbackForm.emailid.$invalid) && feedbackForm.emailid.$touched"
+                            <span ng-show="feedbackForm.emailid.$invalid && !feedbackForm.emailid.$pristine" class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
+                            <span ng-show="(feedbackForm.emailid.$invalid) && !feedbackForm.emailid.$pristine"
                               class="help-block">Enter a valid email address.</span>
                         </div>
                     </div>
