--- a/conFusion/app/views/aboutus.html
+++ b/conFusion/app/views/aboutus.html
@@ -59,25 +59,32 @@
 
 
     <div class="row row-content">
-        <div class="col-xs-12 col-sm-9">
-            <h2>Corporate Leadership</h2>
-            <ul class="media-list">
-                <li class="media" ng-repeat="leader in leaders">
-                    <a class="pull-left" href="#">
-                        <img class="media-object img-thumbnail"
-                             ng-src={{leader.image}} alt="Executive Chef">
-                    </a>
-                    <div class="media-body">
-                        <h2 class="media-heading">{{leader.name}}   <span><small>{{leader.designation}}</small></span></h2>
-                        <br/>
-                        <p>{{leader.description}}</p>
-                    </div>
-                </li>
-            </ul>
-
+        <div ng-if="!showLeaders">
+            <h3 align=center>{{showLeadersMessage}}</h3>
         </div>
-        <div class="col-xs-12 col-sm-3">
-            <p style="padding:20px;"></p>
+        <div ng-if="showLeaders">
+            <div class="col-xs-12 col-sm-9">
+                <h2>Corporate Leadership</h2>
+                <ul class="media-list">
+                    <li class="media" ng-repeat="leader in leaders">
+                        <a class="pull-left" href="#">
+                            <img class="media-object img-thumbnail"
+                                 ng-src={{leader.image}} alt="Executive Chef">
+                        </a>
+
+                        <div class="media-body">
+                            <h2 class="media-heading">{{leader.name}} <span><small>{{leader.designation}}</small></span>
+                            </h2>
+                            <br/>
+
+                            <p>{{leader.description}}</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-xs-12 col-sm-3">
+                <p style="padding:20px;"></p>
+            </div>
         </div>
     </div>
     <div class="row row-content">
