--- a/conFusion/app/views/home.html
+++ b/conFusion/app/views/home.html
@@ -12,13 +12,15 @@
             <div class="media">
                 <a class="pull-left" href="#">
                     <img class="media-object img-thumbnail"
-                         ng-src={{featuredDish.image}} alt="Promotion">
+                         ng-src={{featuredDish.image}} alt="Featured Dish">
                 </a>
+
                 <div class="media-body">
                     <h2 class="media-heading">{{featuredDish.name}}
                         <span class="label label-danger">{{featuredDish.label}}</span>
                         <span class="badge">{{featuredDish.price | currency}}</span></h2>
                     <br/>
+
                     <p>{{featuredDish.description}}</p>
                 </div>
             </div>
@@ -27,44 +29,60 @@
 
 
     <div class="row row-content">
-        <div class="col-xs-12 col-sm-3">
-            <p style="padding:20px;"></p>
-
-            <h3 align=center>This Month's Promotions</h3>
+        <div ng-if="!showPromotion">
+            <h3 align=center>{{showPromotionMessage}}</h3>
         </div>
-        <div class="col-xs-12 col-sm-9">
-            <div class="media">
-                <a class="pull-right" href="#">
-                    <img class="media-object img-thumbnail"
-                         ng-src={{promotion.image}} alt="Promotion">
-                </a>
-                <div class="media-body">
-                    <h2 class="media-heading">{{promotion.name}}
-                        <span class="label label-danger">{{promotion.label}}</span>
-                        <span class="badge">{{promotion.price | currency}}</span></h2>
-                    <br/>
-                    <p class="">{{promotion.description}}</p>
+        <div ng-if="showPromotion">
+            <div class="col-xs-12 col-sm-3">
+                <p style="padding:20px;"></p>
+
+                <h3 align=center>This Month's Promotions</h3>
+            </div>
+            <div class="col-xs-12 col-sm-9">
+                <div class="media">
+                    <a class="pull-right" href="#">
+                        <img class="media-object img-thumbnail"
+                             ng-src={{promotion.image}} alt="Promotion">
+                    </a>
+
+                    <div class="media-body">
+                        <h2 class="media-heading">{{promotion.name}}
+                            <span class="label label-danger">{{promotion.label}}</span>
+                            <span class="badge">{{promotion.price | currency}}</span></h2>
+                        <br/>
+
+                        <p class="">{{promotion.description}}</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="row row-content">
-        <div class="col-xs-12 col-sm-3 col-sm-push-9">
-            <p style="padding:20px;"></p>
-
-            <h3 align=center>Meet our Culinary Specialists</h3>
+        <div ng-if="!showLeader">
+            <h3 align=center>{{showLeaderMessage}}</h3>
         </div>
-        <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-            <div class="media">
-                <a class="pull-left" href="#">
-                    <img class="media-object img-thumbnail"
-                         ng-src={{leader.image}} alt="Executive Chef">
-                </a>
-                <div class="media-body">
-                    <h2 class="media-heading">{{leader.name}}&nbsp;<small>{{leader.designation}}</small></h2>
-                    <br/>
-                    <p>{{leader.description}}</p>
+        <div ng-if="showLeader">
+            <div class="col-xs-12 col-sm-3 col-sm-push-9">
+                <p style="padding:20px;"></p>
+
+                <h3 align=center>Meet our Culinary Specialists</h3>
+            </div>
+            <div class="col-xs-12 col-sm-9 col-sm-pull-3">
+                <div class="media">
+                    <a class="pull-left" href="#">
+                        <img class="media-object img-thumbnail"
+                             ng-src={{leader.image}} alt="Executive Chef">
+                    </a>
+
+                    <div class="media-body">
+                        <h2 class="media-heading">{{leader.name}}&nbsp;
+                            <small>{{leader.designation}}</small>
+                        </h2>
+                        <br/>
+
+                        <p>{{leader.description}}</p>
+                    </div>
                 </div>
             </div>
         </div>
